--- a/app/views/layouts/_kindergarten.html.erb
+++ b/app/views/layouts/_kindergarten.html.erb
@@ -4,7 +4,7 @@
     <div class="mu-kindergarten-character-speech-bubble">
       <span class="mu-kindergarten-exercise-description"><%= exercise.description_task %></span>
       <div class="mu-kindergarten-buttons">
-        <button class="mu-kindergarten-show-context" onclick="mumuki.kids.context.showContext()">
+        <button class="mu-kindergarten-show-context" onclick="mumuki.kids.context.show()">
           <img class="mu-kindergarten-button-image" src="https://mumuki.io/static/show-context.svg" alt="">
         </button>
         <button class="mu-kindergarten-play-description" onclick="mumuki.kids.speech.click('.mu-kindergarten-exercise-description', '<%= exercise.locale %>')">
