--- a/app/assets/stylesheets/mumuki_laboratory/application/modules/_kindergarten.scss
+++ b/app/assets/stylesheets/mumuki_laboratory/application/modules/_kindergarten.scss
@@ -147,7 +147,7 @@ $modal-footer-height: 95px;
         div, p {
           height: 100%;
           .mu-kindergarten-context-image-slides {
-            img:not(.active) {
+            > :not(.active) {
               display: none;
             }
           }
@@ -225,11 +225,13 @@ $modal-footer-height: 95px;
   }
 }
 
-#kids-results.mu-kindergarten-context {
+#kids-results.mu-kindergarten-context,
+#kids-results.mu-kids-modal-border {
   .modal-body{
     height: calc(100% - #{$modal-header-height} - #{$modal-footer-height});
   }
 }
+
 #kids-results-aborted.mu-kindergarten-context {
   .modal-body{
     height: calc(100% - #{$modal-header-height});
