--- a/app/views/layouts/modals/_kids_results.html.erb
+++ b/app/views/layouts/modals/_kids_results.html.erb
@@ -1,17 +1,32 @@
 <div class="modal fade mu-kids-results mu-kids-modal-border" id="kids-results" tabindex="-1" role="dialog" aria-hidden="true">
   <div class="modal-dialog">
     <div class="modal-content success">
+      <button type="button" class="mu-kindergarten-modal-button mu-close" data-waiting="" data-dismiss="modal" aria-label="Close">
+        <span aria-hidden="true">
+          <i class="fa fa-fw fa-times fa-3x"></i>
+        </span>
+      </button>
+      <button type="button" class="mu-kindergarten-modal-button mu-previous hidden" onclick="mumuki.kids.resultsCarrousel.prevSlide()" aria-label="Previous">
+        <span aria-hidden="true">
+          <i class="fa fa-fw fa-arrow-left fa-3x"></i>
+        </span>
+      </button>
+      <button type="button" class="mu-kindergarten-modal-button mu-next" onclick="mumuki.kids.resultsCarrousel.nextSlide()" aria-label="Next">
+        <span aria-hidden="true">
+          <i class="fa fa-fw fa-arrow-right fa-3x"></i>
+        </span>
+      </button>
       <div class="modal-header text-center">
       </div>
       <div class="modal-body">
         <div class="container-fluid">
           <div class="row">
             <div class="col-md-12">
-              <div class="row">
-                <div class="col-md-12 submission-results">
+              <div class="mu-kindergarten-context-image-slides">
+                <div class="active submission-results">
                   <% if current_user? && @assignment.solved? %>
                     <%= render partial: 'exercise_solutions/kids_results',
-                                 locals: {assignment: @assignment, guide_finished_by_solution: false} %>
+                               locals: {assignment: @assignment, guide_finished_by_solution: false} %>
                   <% end %>
                 </div>
               </div>
