--- a/app/views/layouts/modals/_kindergarten_results.html.erb
+++ b/app/views/layouts/modals/_kindergarten_results.html.erb
@@ -22,11 +22,11 @@
         <div class="container-fluid">
           <div class="row">
             <div class="col-md-12">
-
+              <div class="mu-kids-results-carrousel">
+                <div class="active submission-results"></div>
+              </div>
             </div>
-          </div><div class="mu-kindergarten-context-image-slides">
-          <div class="active submission-results"></div>
-        </div>
+          </div>
         </div>
       </div>
       <div class="modal-footer">
