--- a/app/views/layouts/modals/_kindergarten_context.html.erb
+++ b/app/views/layouts/modals/_kindergarten_context.html.erb
@@ -1,6 +1,6 @@
-<div class="modal fade mu-kindergarten-context" id="mu-kids-context" tabindex="-1" role="dialog" aria-hidden="true">
+<div class="modal fade mu-kids-modal-border" id="mu-kids-context" tabindex="-1" role="dialog" aria-hidden="true">
   <div class="modal-dialog">
-    <div class="modal-content">
+    <div class="modal-content kindergarten">
       <button type="button" class="mu-kindergarten-modal-button mu-close" data-waiting="" data-dismiss="modal" aria-label="Close">
         <span aria-hidden="true">
           <i class="fa fa-fw fa-times fa-3x"></i>
@@ -16,7 +16,7 @@
           <i class="fa fa-fw fa-arrow-right fa-3x"></i>
         </span>
       </button>
-      <div class="modal-body">
+      <div class="modal-body mu-kids-context-body">
         <div class="container-fluid">
           <div class="row">
             <div class="col-md-12">
