--- a/app/views/layouts/modals/_kindergarten_results.html.erb
+++ b/app/views/layouts/modals/_kindergarten_results.html.erb
@@ -1,6 +1,6 @@
-<div class="modal fade mu-kids-results mu-kindergarten-context" id="kids-results" tabindex="-1" role="dialog" aria-hidden="true">
+<div class="modal fade mu-kids-results mu-kids-modal-border" id="kids-results" tabindex="-1" role="dialog" aria-hidden="true">
   <div class="modal-dialog">
-    <div class="modal-content">
+    <div class="modal-content kindergarten">
       <button type="button" class="mu-kindergarten-modal-button mu-close" data-waiting="" data-dismiss="modal" aria-label="Close">
         <span aria-hidden="true">
           <i class="fa fa-fw fa-times fa-3x"></i>
@@ -23,7 +23,7 @@
           <div class="row">
             <div class="col-md-12">
               <div class="mu-kids-results-carrousel">
-                <div class="active submission-results"></div>
+                <div class="active submission-results kindergarten"></div>
               </div>
             </div>
           </div>
