--- a/app/views/layouts/modals/_kindergarten_results_aborted.html.erb
+++ b/app/views/layouts/modals/_kindergarten_results_aborted.html.erb
@@ -1,6 +1,6 @@
-<div class="modal fade mu-kids-results-aborted mu-kindergarten-context" id="kids-results-aborted" tabindex="-1" role="dialog" aria-hidden="true">
+<div class="modal fade mu-kids-results-aborted mu-kids-modal-border" id="kids-results-aborted" tabindex="-1" role="dialog" aria-hidden="true">
   <div class="modal-dialog">
-    <div class="modal-content broken">
+    <div class="modal-content broken kindergarten">
       <button type="button" class="mu-kindergarten-modal-button mu-close" data-dismiss="modal" aria-label="Close" data-waiting="">
             <span aria-hidden="true">
               <i class="fa fa-fw fa-times fa-3x"></i>
