--- a/app/views/layouts/modals/_kindergarten_results.html.erb
+++ b/app/views/layouts/modals/_kindergarten_results.html.erb
@@ -1,17 +1,17 @@
 <div class="modal fade mu-kids-results mu-kids-modal-border" id="kids-results" tabindex="-1" role="dialog" aria-hidden="true">
   <div class="modal-dialog">
     <div class="modal-content kindergarten">
-      <button type="button" class="mu-kindergarten-modal-button mu-close" data-waiting="" data-dismiss="modal" aria-label="Close">
+      <button type="button" class="mu-kids-modal-button mu-close" data-waiting="" data-dismiss="modal" aria-label="Close">
         <span aria-hidden="true">
           <i class="fa fa-fw fa-times fa-3x"></i>
         </span>
       </button>
-      <button type="button" class="mu-kindergarten-modal-button mu-previous hidden" onclick="mumuki.kids.resultsCarrousel.prevSlide()" aria-label="Previous">
+      <button type="button" class="mu-kids-modal-button mu-previous hidden" onclick="mumuki.kids.resultsCarrousel.prevSlide()" aria-label="Previous">
         <span aria-hidden="true">
           <i class="fa fa-fw fa-arrow-left fa-3x"></i>
         </span>
       </button>
-      <button type="button" class="mu-kindergarten-modal-button mu-next" onclick="mumuki.kids.resultsCarrousel.nextSlide()" aria-label="Next">
+      <button type="button" class="mu-kids-modal-button mu-next" onclick="mumuki.kids.resultsCarrousel.nextSlide()" aria-label="Next">
         <span aria-hidden="true">
           <i class="fa fa-fw fa-arrow-right fa-3x"></i>
         </span>
