Add title to level_up modal

--- a/app/views/layouts/modals/_kids_level_up.html.erb
+++ b/app/views/layouts/modals/_kids_level_up.html.erb
@@ -1,6 +1,11 @@
-<div class="text-center mu-level">
-  <i class="fa fa-star fa-fw fa-4x"></i>
-  <span class="mu-level-number"></span>
-  <p></p>
-  <p id="mu-solve-more-exercises"> <%= (t :solve_more_exercises_to_level_up).html_safe %></p>
+<div>
+  <h3 class="text-center">
+    <%= t :level_up %>
+  </h3>
+  <div class="text-center mu-level">
+    <i class="fa fa-star fa-fw fa-4x"></i>
+    <span class="mu-level-number"></span>
+    <p></p>
+    <p id="mu-solve-more-exercises"> <%= (t :solve_more_exercises_to_level_up).html_safe %></p>
+  </div>
 </div>
