--- a/app/views/layouts/modals/_kindergarten_results_aborted.html.erb
+++ b/app/views/layouts/modals/_kindergarten_results_aborted.html.erb
@@ -15,7 +15,7 @@
         <div class="container-fluid">
           <div class="row">
             <div class="col-md-12">
-              <div class="mu-kids-character">
+              <div class="mu-kids-character kindergarten">
                 <img class="mu-kids-character-result-aborted"/>
               </div>
             </div>
