--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -19,7 +19,7 @@
       </div>
       <div class="mu-navbar-avatar">
         <% if current_logged_user? %>
-          <% if Organization.current.gamification_enabled? %>
+          <% if in_gamified_context? %>
             <i class="fa fa-star fa-fw fa-2x navbar-icon mu-level-tooltip" data-toggle="tooltip" data-placement="bottom" title="<%= t(:level) %>"></i>
             <span class="mu-level-number"></span>
           <% end %>
