Update footer layout and add terms links

--- a/app/assets/stylesheets/mumuki_laboratory/application/_layout.scss
+++ b/app/assets/stylesheets/mumuki_laboratory/application/_layout.scss
@@ -31,7 +31,10 @@ body {
   width: 100%;
   height: 110px;
   .container {
-    margin-top: 33px;
+    margin-top: 23px;
+  }
+  .footer-row {
+    margin-top: 10px;
   }
 }
 
