--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -52,36 +52,29 @@
 
 <% content_for :footer do %>
   <footer class="footer">
-    <div class="<%= exercise_container_type %>">
-      <hr>
-
-      <div class="row footer-row">
-        <div class="col-md-12">
+    <div class="mu-footer <%= exercise_container_type %>">
+      <div class="mu-footer-row">
+        <div class="mu-footer-authoring">
           <%= yield :authoring %>
         </div>
       </div>
 
-      <div class="row footer-row">
+      <div class="mu-footer-row">
+        <div class="mu-footer-copyright">
+          <%= render partial: 'layouts/copyright' %>
+        </div>
 
-        <div class="col-md-4 text-center">
-          <p><%= link_to_profile_terms %></p>
+        <div class="mu-footer-terms">
+          <div><%= link_to_profile_terms %></div>
           <% if current_user&.can_discuss_here? %>
-            <p><%= link_to_forum_terms %></p>
+            <div><%= link_to_forum_terms %></div>
           <% end %>
         </div>
 
-        <div class="col-md-4 text-center">
-          <a href="https://auth0.com/" target="_blank">
-            <img height="40" alt="JWT Auth for open source projects" src="//cdn.auth0.com/oss/badges/a0-badge-light.png"/>
-          </a>
-          <%= login_form.footer_html %>
-        </div>
+        <%= login_form.footer_html %>
 
-        <div id="footer-social" class="col-md-4 text-right" lang="en">
-          <p><%= render partial: 'layouts/social_media' %></p>
-          <p id="footer-copyright">
-            <%= render partial: 'layouts/copyright' %>
-          </p>
+        <div id="footer-social" class="mu-footer-social" lang="en">
+          <%= render partial: 'layouts/social_media' %>
         </div>
       </div>
 
