Show and hide overlay when needed

--- a/app/assets/stylesheets/mumuki_laboratory/application/modules/_kids.scss
+++ b/app/assets/stylesheets/mumuki_laboratory/application/modules/_kids.scss
@@ -15,6 +15,10 @@ $kids-speech-tabs-width: 40px;
   border: 1px solid #dddddd;
 }
 
+.mu-kids-exercise-workspace.mu-submitless-exercise .mu-kids-submit-button {
+  display: none;
+}
+
 .mu-kids-exercise {
   height: $kids-height;
   min-height: $kids-height;
