--- a/app/views/layouts/_kindergarten.html.erb
+++ b/app/views/layouts/_kindergarten.html.erb
@@ -5,10 +5,10 @@
       <span class="mu-kindergarten-exercise-description"><%= exercise.description_task %></span>
       <div class="mu-kindergarten-buttons">
         <button class="mu-kindergarten-show-context" onclick="mumuki.kids.context.show()">
-          <img class="mu-kindergarten-button-image" src="https://mumuki.io/static/show-context.svg" alt="">
+          <img class="mu-kindergarten-button-image" src="https://mumuki.io/static/show-context.svg" alt="" title="<%= t :see_context %>">
         </button>
         <button class="mu-kindergarten-play-description" onclick="mumuki.kids.speech.click('.mu-kindergarten-exercise-description', '<%= exercise.locale %>')">
-          <img class="mu-kindergarten-button-image mu-kindergarten-play" src="https://mumuki.io/static/audio-play.svg" alt="">
+          <img class="mu-kindergarten-button-image mu-kindergarten-play" src="https://mumuki.io/static/audio-play.svg" alt="" title="<%= t :listen_statement %>">
           <img class="mu-kindergarten-button-image mu-kindergarten-stop hidden" src="https://mumuki.io/static/audio-stop.svg" alt="">
         </button>
       </div>
@@ -17,7 +17,7 @@
   <div class="mu-kindergarten-hint">
     <% if exercise.hint? %>
       <button class="mu-hint-light" onclick="mumuki.kids.hint.toggle()">
-        <img class="mu-hint-light on" src="https://mumuki.io/static/lamparita_on.svg" alt="">
+        <img class="mu-hint-light on" src="https://mumuki.io/static/lamparita_on.svg" alt="" title="<%= t :need_a_hint %>">
       </button>
       <div class="mu-kindergarten-light-speech-bubble">
         <span class="mu-kindergarten-exercise-hint">
@@ -28,7 +28,7 @@
         </button>
       </div>
     <% else %>
-      <img class="mu-hint-light off" src="https://mumuki.io/static/lamparita_off.svg" alt="">
+      <img class="mu-hint-light off" src="https://mumuki.io/static/lamparita_off.svg" alt="" title="<%= t :no_need_hint %>">
     <% end %>
   </div>
 </div>
