Added border to kindergarthen exercise content

--- a/app/assets/stylesheets/mumuki_laboratory/application/modules/_kids.scss
+++ b/app/assets/stylesheets/mumuki_laboratory/application/modules/_kids.scss
@@ -10,6 +10,11 @@ $kids-speech-border: 1px solid $kids-speech-border-color;
 
 $kids-speech-tabs-width: 40px;
 
+.mu-exercise-content {
+  border-radius: 10px;
+  border: 1px solid #dddddd;
+}
+
 .mu-kids-exercise {
   height: $kids-height;
   min-height: $kids-height;
