Use updated stats_for in exercise view

--- a/app/views/exercises/show.html.erb
+++ b/app/views/exercises/show.html.erb
@@ -6,7 +6,7 @@
 
 <%= render partial: 'layouts/authoring', locals: {guide: @guide} %>
 
-<% @stats = @exercise.guide.stats_for(current_user) if current_user && @exercise.guide %>
+<% @stats = @exercise.stats_for(current_user) %>
 
 <% if @exercise.navigable_parent.timed? && !current_user.teacher? %>
   <%= render partial: 'layouts/timer', locals: {end_time: @exercise.navigable_parent.real_end_time(current_user)} %>
