Rename guide related partials

--- a/app/views/exams/show.html.erb
+++ b/app/views/exams/show.html.erb
@@ -1,1 +1,1 @@
-<%= render partial: "layouts/guide", locals: { subject: @exam }%>
+<%= render partial: "layouts/guide_container", locals: { subject: @exam }%>
