--- a/app/views/complements/show.html.erb
+++ b/app/views/complements/show.html.erb
@@ -1,1 +1,1 @@
-<%= render partial: "layouts/guide", locals: { subject: @complement }%>
+<%= render partial: "layouts/guide_container", locals: { subject: @complement }%>
