--- a/app/views/lessons/show.html.erb
+++ b/app/views/lessons/show.html.erb
@@ -1,1 +1,1 @@
-<%= render partial: "layouts/guide", locals: { subject: @lesson }%>
+<%= render partial: "layouts/guide_container", locals: { subject: @lesson }%>
