Add uppercase mode styles

--- a/app/assets/stylesheets/mumuki_laboratory/application/_modules.scss
+++ b/app/assets/stylesheets/mumuki_laboratory/application/_modules.scss
@@ -15,8 +15,9 @@
 @import "modules/guide_corollary";
 @import "modules/highlight";
 @import "modules/kids";
-@import "modules/kindergarten";
 @import "modules/kids_results";
+@import "modules/kindergarten";
+@import "modules/main";
 @import "modules/medal";
 @import "modules/modal";
 @import "modules/organization_chooser";
