--- a/app/views/layouts/exercise_inputs/editors/_code.html.erb
+++ b/app/views/layouts/exercise_inputs/editors/_code.html.erb
@@ -5,12 +5,7 @@
                   value: @current_content,
                   data: {lines: 17} %>
   <div class="mu-overlapped">
-    <a class="editor-resize" title="<%= t(:fullscreen) %> (F11)">
-      <span class="fa-stack fa-lg">
-        <i class="fa fa-square-o fa-stack-2x"></i>
-        <i class="fa fa-expand fa-stack-1x"></i>
-      </span>
-    </a>
+    <a class="editor-resize"> <%= expand_icon %></a>
     <a class="editor-format"><%= format_icon %></a>
     <a class="editor-reset submission-reset" data-confirm="<%= t(:confirm_reset) %>"><%= restart_icon %></a>
   </div>
