--- a/app/views/layouts/exercise_inputs/editors/_multiple_files.html.erb
+++ b/app/views/layouts/exercise_inputs/editors/_multiple_files.html.erb
@@ -27,14 +27,8 @@
     </div>
 
     <div class="mu-overlapped multiple-files">
-      <a class="editor-resize" title="<%= t(:fullscreen) %> (F11)">
-        <span class="fa-stack fa-lg">
-          <i class="fa fa-square-o fa-stack-2x"></i>
-          <i class="fa fa-expand fa-stack-1x"></i>
-        </span>
-      </a>
+      <a class="editor-resize"> <%= expand_icon %></a>
       <!--<a class="editor-reset submission-reset" data-confirm="<%= t(:confirm_reset) %>"><%= restart_icon %></a> -->
     </div>
-
   </div>
 </div>
