Update all icons to FontAwesome5 style

--- a/app/views/book/show.html.erb
+++ b/app/views/book/show.html.erb
@@ -26,7 +26,7 @@
 
       <% unless enabled  %>
         <div class="text-center mu-lock">
-          <i class="fa fa-lock fa-5x"></i>
+          <i class="fas fa-lock fa-5x"></i>
           <p><%= t :locked_content %></p>
         </div>
       <% end %>
