--- a/app/views/layouts/_kindergarten.html.erb
+++ b/app/views/layouts/_kindergarten.html.erb
@@ -24,7 +24,7 @@
           <%= exercise.hint.markdownified %>
         </span>
         <button class="expand-or-collapse-hint-media" onclick="mumuki.kids.hint.toggleMedia()">
-          <i class="fa fa-fw fa-2x fa-caret-up"></i>
+          <i class="fas fa-fw fa-2x fa-caret-up"></i>
         </button>
       </div>
     <% else %>
