--- a/app/views/layouts/_timer.html.erb
+++ b/app/views/layouts/_timer.html.erb
@@ -1,6 +1,6 @@
 <div class="row">
   <div class="col-md-3 col-md-offset-5">
-    <i class="timer text-center fa fa-clock-o"></i>
+    <i class="timer text-center far fa-clock"></i>
     <i class="timer timer-text text-center"><%= t :time_left %></i>
     <i id="timer" class="timer timer-text text-center"></i>
     <script>
