--- a/app/views/layouts/modals/_guide_corollary.html.erb
+++ b/app/views/layouts/modals/_guide_corollary.html.erb
@@ -4,7 +4,7 @@
       <% if Organization.current.kids? %>
         <button type="button" class="mu-kids-modal-button mu-close" data-dismiss="modal" aria-label="Close">
           <span aria-hidden="true">
-            <i class="fa fa-fw fa-times fa-3x"></i>
+            <i class="fas fa-fw fa-times fa-3x"></i>
           </span>
         </button>
       <% end %>
