--- a/app/views/layouts/modals/_kids_results.html.erb
+++ b/app/views/layouts/modals/_kids_results.html.erb
@@ -3,12 +3,12 @@
     <div class="modal-content success">
       <button type="button" class="mu-kids-modal-button mu-previous hidden" onclick="mumuki.kids.resultsCarrousel.prevSlide()" aria-label="Previous">
         <span aria-hidden="true">
-          <i class="fa fa-fw fa-arrow-left fa-3x"></i>
+          <i class="fas fa-fw fa-arrow-left fa-3x"></i>
         </span>
       </button>
       <button type="button" class="mu-kids-modal-button mu-next" onclick="mumuki.kids.resultsCarrousel.nextSlide()" aria-label="Next">
         <span aria-hidden="true">
-          <i class="fa fa-fw fa-arrow-right fa-3x"></i>
+          <i class="fas fa-fw fa-arrow-right fa-3x"></i>
         </span>
       </button>
       <div class="modal-header text-center">
