--- a/app/views/layouts/modals/_kindergarten_context.html.erb
+++ b/app/views/layouts/modals/_kindergarten_context.html.erb
@@ -3,17 +3,17 @@
     <div class="modal-content kindergarten">
       <button type="button" class="mu-kids-modal-button mu-close" data-waiting="" data-dismiss="modal" aria-label="Close">
         <span aria-hidden="true">
-          <i class="fa fa-fw fa-times fa-3x"></i>
+          <i class="fas fa-fw fa-times fa-3x"></i>
         </span>
       </button>
       <button type="button" class="mu-kids-modal-button mu-previous hidden" onclick="mumuki.kids.context.prevSlide()" aria-label="Previous">
         <span aria-hidden="true">
-          <i class="fa fa-fw fa-arrow-left fa-3x"></i>
+          <i class="fas fa-fw fa-arrow-left fa-3x"></i>
         </span>
       </button>
       <button type="button" class="mu-kids-modal-button mu-next" onclick="mumuki.kids.context.nextSlide()" aria-label="Next">
         <span aria-hidden="true">
-          <i class="fa fa-fw fa-arrow-right fa-3x"></i>
+          <i class="fas fa-fw fa-arrow-right fa-3x"></i>
         </span>
       </button>
       <div class="modal-body mu-kids-context-body">
