--- a/app/views/layouts/modals/_kindergarten_results_aborted.html.erb
+++ b/app/views/layouts/modals/_kindergarten_results_aborted.html.erb
@@ -3,7 +3,7 @@
     <div class="modal-content broken kindergarten">
       <button type="button" class="mu-kids-modal-button mu-close" data-dismiss="modal" aria-label="Close" data-waiting="">
             <span aria-hidden="true">
-              <i class="fa fa-fw fa-times fa-3x"></i>
+              <i class="fas fa-fw fa-times fa-3x"></i>
             </span>
       </button>
       <div class="modal-header">
