--- a/app/views/users/_edit_user_form.html.erb
+++ b/app/views/users/_edit_user_form.html.erb
@@ -9,7 +9,7 @@
   <div class="row mu-tab-body">
     <div class="col-md-4 text-center">
       <%= profile_picture_for(@user, id: 'mu-user-avatar', class: 'mu-user-avatar') %>
-      <i class="fa fa-pencil fa-2x pointer mu-edit-avatar" id="mu-edit-avatar-icon" tabindex="0"></i>
+      <i class="fas fa-pencil-alt fa-2x pointer mu-edit-avatar" id="mu-edit-avatar-icon" tabindex="0"></i>
     </div>
     <div class="col-md-8">
       <%= render partial: 'profile_fields', locals: {form: f} %>
