--- a/app/views/exercises/_exercise_assignment.html.erb
+++ b/app/views/exercises/_exercise_assignment.html.erb
@@ -6,7 +6,7 @@
     <div class="hint-box <%= 'hidden' if exercise.hint.blank? %>">
       <% if exercise.hint.present? %>
         <a data-toggle="collapse" href="#hint-section" class="text-info">
-          <%= fa_icon 'lightbulb-o' %> <%= t :need_a_hint %>
+          <%= fa_icon 'lightbulb', type: :regular %> <%= t :need_a_hint %>
         </a>
 
         <div id="hint-section" class="collapse">
