--- a/app/views/exercises/show.html.erb
+++ b/app/views/exercises/show.html.erb
@@ -51,7 +51,7 @@
 
 <div style="display: none" id="processing-template">
   <div class="bs-callout bs-callout-info">
-    <h4><i class="fa fa-refresh fa-spin"></i> <strong><%= t :processing_your_solution %></strong></h4>
+    <h4><i class="fas fa-sync-alt fa-spin"></i> <strong><%= t :processing_your_solution %></strong></h4>
     <%= t :refresh_or_wait %>
   </div>
 </div>
