--- a/app/views/layouts/modals/_level_up.html.erb
+++ b/app/views/layouts/modals/_level_up.html.erb
@@ -13,7 +13,7 @@
           <div class="row">
             <div class="col-md-12">
               <div class="text-center mu-level">
-                <i class="fa fa-star fa-fw fa-4x"></i>
+                <i class="fas fa-star fa-fw fa-4x"></i>
                 <span class="mu-level-number"></span>
                 <p></p>
                 <p id="mu-solve-more-exercises"> <%= (t :solve_more_exercises_to_level_up).html_safe %></p>
