--- a/app/views/users/_user_form.html.erb
+++ b/app/views/users/_user_form.html.erb
@@ -12,7 +12,7 @@
         <path id="mu-level-progress" stroke-linecap="round" stroke="#24b8aa" stroke-width="4" stroke-dasharray="0, 999" fill="none" d="M50 10 a 40 40 0 0 1 0 80 a 40 40 0 0 1 0 -80"></path>
       </svg>
       <div class="mu-level">
-        <i class="fa fa-star fa-fw fa-4x"></i>
+        <i class="fas fa-star fa-fw fa-4x"></i>
         <span class="mu-level-number"></span>
         <p><%= t :level %></p>
       </div>
