Add format icon to multiple files editor

--- a/app/views/layouts/exercise_inputs/editors/_multiple_files.html.erb
+++ b/app/views/layouts/exercise_inputs/editors/_multiple_files.html.erb
@@ -28,6 +28,7 @@
 
     <div class="mu-overlapped multiple-files">
       <a class="editor-resize"> <%= expand_icon %></a>
+      <a class="editor-format"><%= format_icon %></a>
       <!--<a class="editor-reset submission-reset" data-confirm="<%= t(:confirm_reset) %>"><%= restart_icon %></a> -->
     </div>
   </div>
