--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -39,7 +39,7 @@
             <ul class="dropdown-menu dropdown-menu-right" aria-labelledby="profileDropdown">
               <%= menu_bar_list_items %>
               <li class="divider"></li>
-              <li><%= link_to(t(:sign_out), logout_path(origin: url_for), role: 'menuitem') %></li>
+              <%= logout_link %>
             </ul>
           </div>
         <% else %>
