--- a/app/views/layouts/_guide_title_icons.html.erb
+++ b/app/views/layouts/_guide_title_icons.html.erb
@@ -1,9 +1,9 @@
-<div class='guide-title-icons'>
-<% if current_user? && should_display_medal?(@guide, Organization.current) %>
-  <div class="pull-left">
-    <%= content_medal_for(@guide, current_user) %>
-  </div>
-<% end %>
+<div class='guide-title-icons pull-left'>
+  <% if current_user? && should_display_medal?(@guide, Organization.current) %>
+    <div class="pull-left">
+      <%= content_medal_for(@guide, current_user) %>
+    </div>
+  <% end %>
 <%= teacher_info_button @guide %>
 <%= link_to_bibliotheca_guide @guide %>
 </div>
