Added passed with warnings animation

--- a/app/assets/stylesheets/mumuki_laboratory/application/modules/_kids_results.scss
+++ b/app/assets/stylesheets/mumuki_laboratory/application/modules/_kids_results.scss
@@ -131,6 +131,7 @@ $capital-animation-width: 135px;
         'success': $mu-color-success,
         'warning': $mu-color-warning,
         'passed': $mu-color-success,
+        'passed_with_warnings': $mu-color-warning,
         'passed-with-warnings': $mu-color-warning,
         'failed': $mu-color-danger,
         'errored': $mu-color-broken,
