Added I18n translation prefix support

--- a/app/views/layouts/exercise_inputs/layouts/_input_kindergarten.html.erb
+++ b/app/views/layouts/exercise_inputs/layouts/_input_kindergarten.html.erb
@@ -1,6 +1,6 @@
 <% content_for :no_container do %>
 
-  <div <%= turbolinks_enable_for exercise %>>
+  <div <%= turbolinks_enable_for exercise %> data-i18n-prefix="kindergarten">
 
     <div class="mu-kids-landscape-support container-fluid">
       <img class="mu-kids-character-animation"/>
