--- a/app/views/layouts/modals/_kindergarten_results_aborted.html.erb
+++ b/app/views/layouts/modals/_kindergarten_results_aborted.html.erb
@@ -8,7 +8,7 @@
       </button>
       <div class="modal-header">
         <h4 class="modal-title text-broken">
-          <strong><%= t :kindergarten_aborted %></strong>
+          <strong><%= t :aborted %></strong>
         </h4>
       </div>
       <div class="modal-body">
