Use quotation marks consistently

--- a/app/views/layouts/_guide_title_icons.html.erb
+++ b/app/views/layouts/_guide_title_icons.html.erb
@@ -1,4 +1,4 @@
-<div class='guide-title-icons pull-left'>
+<div class="guide-title-icons pull-left">
   <% if current_user? && should_display_medal?(@guide, Organization.current) %>
     <div class="pull-left">
       <%= content_medal_for(@guide, current_user) %>
