Hide summary marker for webkit

--- a/app/assets/stylesheets/mumuki_laboratory/application/modules/_terms.scss
+++ b/app/assets/stylesheets/mumuki_laboratory/application/modules/_terms.scss
@@ -15,11 +15,15 @@
   }
   .terms-card-header {
     cursor: pointer;
+    outline: 0;
     font-weight: bold;
     padding: .75rem 1.25rem;
     margin-bottom: 0;
     background-color: rgba(0,0,0,.03);
     border-bottom: 1px solid rgba(0,0,0,.125);
+    &::-webkit-details-marker {
+      display:none;
+    }
   }
   &:first-child .terms-card-header{
     border-radius: calc(.25rem - 1px) calc(.25rem - 1px) 0 0;
