Add class for terms title

--- a/app/views/users/_term.html.erb
+++ b/app/views/users/_term.html.erb
@@ -1,7 +1,7 @@
 <div class="terms-card">
   <details <%= 'open' unless collapsed %>>
     <summary class="terms-card-header">
-      <h4><%= term.header %></h4>
+      <h4 class="terms-card-title"><%= term.header %></h4>
     </summary>
     <div class="terms-card-body">
       <%= term.content_html %>
