--- a/app/views/book_discussions/index.html.erb
+++ b/app/views/book_discussions/index.html.erb
@@ -10,7 +10,7 @@
 
 <div class="row">
   <div class="mu-inline-block-left">
-    <h1><%= @debatable.name %></h1>
+    <h1><%= t :forum %></h1>
   </div>
 </div>
 
