Add mu-uppercase class to body if user has it enabled

--- a/app/views/layouts/_main.html.erb
+++ b/app/views/layouts/_main.html.erb
@@ -17,7 +17,7 @@
 
   <%= login_form.header_html %>
 </head>
-<body>
+<body class="<%= uppercase_enabled?(current_user) ? 'mu-uppercase' : '' %>">
 <% if should_choose_organization? %>
     <%= render partial: 'layouts/organization_chooser' %>
 <% end %>
