Implement activity week filter

--- a/app/views/users/_activity_indicator.html.erb
+++ b/app/views/users/_activity_indicator.html.erb
@@ -1,5 +1,9 @@
 <div class="row">
-  <h3><%= title %></h3>
+  <div class="col-md-12">
+    <h3><%= title %></h3>
+  </div>
+</div>
+<div class="row">
   <% stats.each do |s| %>
     <div class="col-md-6">
       <div class="jumbotron mu-user-activity-indicator">
