Use new media breakpoints mixins

--- a/app/assets/stylesheets/mumuki_laboratory/application/_errors.scss
+++ b/app/assets/stylesheets/mumuki_laboratory/application/_errors.scss
@@ -19,7 +19,7 @@
         width: calc(100%);
         object-position: 50% 50%;
         overflow: hidden;
-        @media (max-width: $screen-lg) {
+        @include media-breakpoint-down(xl) {
           object-fit: none;
         }
       }
