--- a/app/assets/stylesheets/mumuki_laboratory/application/modules/_faqs.scss
+++ b/app/assets/stylesheets/mumuki_laboratory/application/modules/_faqs.scss
@@ -74,7 +74,7 @@
           &:hover {
             text-decoration: none;
           }
-          @media (min-width: $container-lg) {
+          @include media-breakpoint-up(xl) {
             font-size: 1.1em;
           }
         }
