Fix 'not a question' icon on discussions

--- a/app/assets/stylesheets/mumuki_laboratory/application/modules/_discussion.scss
+++ b/app/assets/stylesheets/mumuki_laboratory/application/modules/_discussion.scss
@@ -344,8 +344,9 @@ summary.discussion-summary {
             &:after {
               position: absolute;
               left: 10px;
+              top: -6px;
               content: ' ';
-              height: 19px;
+              height: 30px;
               width: 2px;
               transform: rotate(-45deg);
               background-color: #aaaaaa;
