Replace 'moderator' locale with genderless 'moderation'

--- a/app/views/discussions/_message.html.erb
+++ b/app/views/discussions/_message.html.erb
@@ -4,7 +4,7 @@
       <div class="discussion-message-bubble-title">
         <%= user.name %>
         <% if user.moderator_here? %>
-          <span class="moderator-badge"><%= t(:moderator) %></span>
+          <span class="moderator-badge"><%= t(:moderation) %></span>
         <% end %>
         <span class="message-date">
           <%= t(:time_since, time: time_ago_in_words(message.created_at)) %>
