Tidy up translations

--- a/app/views/notifications/_discussion.html.erb
+++ b/app/views/notifications/_discussion.html.erb
@@ -1,1 +1,1 @@
-<%= menu_item :comments, :discussion_new_message, url_for([target.item, target]), { title: target.title.truncate_words(3) } %>
+<%= menu_item :comments, :new_discussion_message, url_for([target.item, target]), { title: target.title.truncate_words(3) } %>
